# docmcp

./: .gitignore  AGENTS.md  API.md  README.md  __init__.py  examples.py  pyproject.toml  requirements.txt
core/: __init__.py  document.py  engine.py  utils.py
core/handlers/: __init__.py  base.py  ppt_handler.py
docmcp/: __init__.py  config.py
docmcp/core/: __init__.py  document.py  engine.py  pipeline.py  utils.py
docmcp/core/handlers/: __init__.py  base.py  excel_handler.py  pdf_handler.py  word_handler.py
docmcp/mcp/: __init__.py  client.py  protocol.py  server.py
docmcp/performance/: __init__.py  cache.py  limiter.py  monitor.py  pool.py
docmcp/security/: __init__.py  audit.py  auth.py  sandbox.py  scanner.py
docmcp/skills/: __init__.py  base.py  context.py  decorators.py  loader.py  registry.py  sandbox.py  scheduler.py
docmcp/skills/builtins/: analyze_document.py  convert_format.py  extract_text.py  merge_documents.py
docmcp/utils/: __init__.py  async_utils.py  config.py  logging_utils.py  security.py  validation.py
examples/: __init__.py  basic_server.py  basic_usage.py  client_example.py  demo_skills.py  interactive_demo.py  skills_config.yaml  test_mcp.py
mcp/: __init__.py  client.py  doc_server.py  protocol.py  server.py
performance/: __init__.py  cache.py  limiter.py  monitor.py
security/: __init__.py  auth.py  sandbox.py  scanner.py
skills/: __init__.py  base.py  context.py  decorators.py  loader.py  registry.py
skills/builtins/: __init__.py  analyze_document.py  convert_format.py  extract_text.py
tests/: REPORT_TEMPLATE.md  __init__.py  conftest.py  test_document.py  test_engine.py  test_handlers.py  test_mcp_integration.py  test_performance.py  test_security.py  test_skills.py  test_skills_integration.py  test_utils.py
tests/data/: generate_test_data.py  generate_test_files.py  sample.docx  sample.html  sample.md  sample.pptx  sample.txt  sample.xlsx
